# bms

./: README.md  pyproject.toml
bms/backend/: bms_functions.py  computer.py  config.py  logger.py
bms/backend/database/: db.py  models.py
bms/frontend/: tui.py  tui.py.bak
